<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context=".ui.PerformanceTestActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/functions" />

    <Button
        android:id="@+id/perf_escape_btn"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:text="@string/perf_escape" />

    <Button
        android:id="@+id/perf_single_core_btn"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:text="@string/perf_single_core" />

    <Button
        android:id="@+id/perf_multi_core_btn"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:text="@string/perf_multi_core" />

</LinearLayout>