<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <RelativeLayout
        android:id="@+id/mainRelativelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/mainLinerlayout"></RelativeLayout>

    <LinearLayout
        android:id="@+id/mainLinerlayout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/mainFunctionBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/functions"></Button>

        <Button
            android:id="@+id/mainOverviewBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/overview"></Button>

        <Button
            android:id="@+id/mainSettingsBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/settings"></Button>
    </LinearLayout>

</RelativeLayout>